[gd_scene load_steps=12 format=3 uid="uid://daqt8i3mb3xqg"]

[ext_resource type="Script" uid="uid://bbr7yk63tc4a6" path="res://script/home.gd" id="1_o2m4f"]
[ext_resource type="Script" uid="uid://dkgq5naqqv1u5" path="res://script/player/home_state/player_home_state_machine.gd" id="1_u2hr5"]
[ext_resource type="Script" uid="uid://cwk1in0a2wew4" path="res://script/player/home_state/player_home_idle_state.gd" id="2_dpldj"]
[ext_resource type="Script" uid="uid://biodhnjftx7g6" path="res://script/player/home_state/player_home_move_state.gd" id="3_8wrg1"]
[ext_resource type="Script" uid="uid://cggq08s4gfd7o" path="res://script/player/home_state/player_home_check_state.gd" id="4_8wrg1"]
[ext_resource type="PackedScene" uid="uid://rhpo4sk2kvp2" path="res://scene/player.tscn" id="5_c6rhi"]
[ext_resource type="PackedScene" uid="uid://ddbxcqvgnmnxj" path="res://scene/item_can_be_checked.tscn" id="6_n20s8"]
[ext_resource type="PackedScene" uid="uid://d2simh3tbn86v" path="res://controller/check_controller.tscn" id="8_v3yxl"]
[ext_resource type="Texture2D" uid="uid://cqv6oo6cqgjln" path="res://asset/doorClosed_mid.png" id="9_vs2f5"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_c6rhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34jhd"]

[node name="Home" type="Node"]
script = ExtResource("1_o2m4f")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(600, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -134.0
offset_right = 468.0
offset_bottom = 466.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.409671, 0.409671)
mouse_filter = 2
color = Color(0.781311, 0.784472, 0.483439, 1)

[node name="CheckController" parent="." instance=ExtResource("8_v3yxl")]
unique_name_in_owner = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("1_u2hr5")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bfwgqpc0x8ywi"

[node name="IdleState" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("2_dpldj")
acceleration_smoothing = 12.0
metadata/_custom_type_script = "uid://dkxbpb3m4p3uc"

[node name="MoveState" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("3_8wrg1")
max_speed = 220.0
acceleration_smoothing = 12.0
metadata/_custom_type_script = "uid://dkxbpb3m4p3uc"

[node name="CheckState" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("4_8wrg1")
acceleration_smoothing = 20.0
metadata/_custom_type_script = "uid://dkxbpb3m4p3uc"

[node name="ItemCanBeChecked" parent="." instance=ExtResource("6_n20s8")]
z_index = 1
position = Vector2(350, 206)
scale = Vector2(0.431286, 0.431286)

[node name="Player" parent="." instance=ExtResource("5_c6rhi")]
position = Vector2(248, 183)

[node name="Barriers" type="Node2D" parent="."]
position = Vector2(52, 18)
scale = Vector2(0.395264, 0.395264)

[node name="Down" type="StaticBody2D" parent="Barriers"]
position = Vector2(0, -2.52996)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Down"]
position = Vector2(575, 653)
scale = Vector2(5.52025, 3.62248)
shape = SubResource("WorldBoundaryShape2D_c6rhi")

[node name="Up" type="StaticBody2D" parent="Barriers"]
position = Vector2(-51, -672.968)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Up"]
position = Vector2(575, 695)
rotation = -3.14159
scale = Vector2(5.52025, 3.62248)
shape = SubResource("WorldBoundaryShape2D_c6rhi")

[node name="Right" type="StaticBody2D" parent="Barriers"]
position = Vector2(-705.857, -416)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Right"]
position = Vector2(1594, 695)
rotation = -1.5708
scale = Vector2(5.52025, 3.62248)
shape = SubResource("WorldBoundaryShape2D_c6rhi")

[node name="Left" type="StaticBody2D" parent="Barriers"]
position = Vector2(-414.913, -416)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Left"]
position = Vector2(673, 695)
rotation = 1.5708
scale = Vector2(5.52025, 3.62248)
shape = SubResource("WorldBoundaryShape2D_c6rhi")

[node name="DoorClosedMid" type="Sprite2D" parent="."]
position = Vector2(385, 257)
scale = Vector2(0.248912, 0.248912)
texture = ExtResource("9_vs2f5")

[node name="Area2D" type="Area2D" parent="DoorClosedMid"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorClosedMid/Area2D"]
scale = Vector2(6.40483, 6.40483)
shape = SubResource("RectangleShape2D_34jhd")

[connection signal="body_entered" from="DoorClosedMid/Area2D" to="." method="_on_area_2d_body_entered"]
